对已经领取的红包进行过滤版本;

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -48,7 +48,7 @@
             android:title="@string/version" />
         <Preference
             android:key="pref_app_author"
-            android:summary="CYB"
+            android:summary="Siuming"
             android:title="@string/author" />
         <Preference
             android:summary="@string/instructions_detail"
