--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,12 @@
 
         <TextView
             android:id="@+id/tv_app_name"
-            android:layout_width="wrap_content"
+            android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textAlignment="center"
             android:layout_marginTop="60dp"
-            android:text="@string/app_name"
+            android:text="@string/app_homo_hello"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="28dp" />
 
@@ -77,37 +77,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/open_assistant"
-                        android:textAlignment="center"
-                        android:textColor="#dfaa6a"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/btn_start_watch_notification"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_margin="6dp"
-                        android:background="@mipmap/ic_start" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/open_monitor_notification"
                         android:textAlignment="center"
                         android:textColor="#dfaa6a"
                         android:textSize="18dp"
